--- a/src/main/resources/templates/hello.html
+++ b/src/main/resources/templates/hello.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="https://www.thymeleaf.org">
 <head>
-  <title>Hello World!</title>
+  <title>BOZON</title>
 </head>
 <body>
-<h1>Hello world!</h1>
+<h1><b>Congrats you have been logged to the best marketplace in the TATARSTAN!!!</b></h1>
 </body>
 </html>
