--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -4,8 +4,11 @@
     <title>Spring Security Example</title>
 </head>
 <body>
-<h1>Welcome!</h1>
+<h1><b>Welcome to Bozon!</b></h1>
 
-<p>Click <a th:href="@{/hello}">here</a> to see a greeting.</p>
+<p><a th:href="@{/login}">Login</a></p>
+<p><a th:href="@{/registration}">Register</a></p>
+
+
 </body>
 </html>
