develop add auth

--- a/src/main/resources/templates/hello.html
+++ b/src/main/resources/templates/hello.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="https://www.thymeleaf.org">
 <head>
-  <title>BOZON</title>
+  <title>Bozon</title>
 </head>
 <body>
 <h1><b>Congrats you have been logged to the best marketplace in the TATARSTAN!!!</b></h1>
