--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -7,7 +7,7 @@
 <h1><b>Welcome to Bozon!</b></h1>
 
 <p><a th:href="@{/login}">Login</a></p>
-<p><a th:href="@{/registration}">Register</a></p>
+<p><a th:href="@{/register}">Register</a></p>
 
 
 </body>
