--- a/src/main/resources/templates/registration.html
+++ b/src/main/resources/templates/registration.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="https://www.thymeleaf.org">
 <head>
-    <title>Spring Security Example </title>
+    <title>Bozon</title>
+    <link th:href="@{auth_button.css}" rel="stylesheet" />
 </head>
 <body>
 <div th:if="${param.logout}">
@@ -10,11 +11,11 @@
 <form th:action="@{/register}" th:method="post" th:object="${user}">
     <div style="color: red" th:if="${#fields.hasErrors('username')}" th:errors="*{username}"></div>
     <div><label> Username : <input type="text" name="username"/> </label></div>
-    <div style="color: red" th:if="${#fields.hasErrors('password')}" th:errors="*{username}"></div>
+    <div style="color: red" th:if="${#fields.hasErrors('password')}" th:errors="*{password}"></div>
     <div><label> Password: <input type="password" name="password"/> </label></div>
     <div style="color: red" th:if="${#fields.hasErrors('dateOfBirth')}" th:errors="*{dateOfBirth}"></div>
-    <div><label> date of birth: <input type="text" name="dateOfBirth"/> </label></div>
-    <div><input type="submit" value="Sign up"/></div>
+    <div><label> Year of birth: <input type="text" name="dateOfBirth"/> </label></div>
+    <div><input class="auth_button" type="submit" value="Sign up"/></div>
 </form>
 </body>
 </html>
