--- a/src/main/resources/templates/auth/login.html
+++ b/src/main/resources/templates/auth/login.html
@@ -3,6 +3,7 @@
 <head>
     <title>Bozon</title>
     <link th:href="@{auth_button.css}" rel="stylesheet" />
+<!--    <link rel="shortcut icon" href="/images/favicon.png" type="image/png">-->
 </head>
 <body>
 <div th:if="${param.error}">
