--- a/src/main/resources/templates/hello.html
+++ b/src/main/resources/templates/hello.html
@@ -2,8 +2,20 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="https://www.thymeleaf.org">
 <head>
   <title>Bozon</title>
+  <style>
+    .a {
+      font-size: 160px;
+      font-family: 'GTEestiDisplay',Arial,sans-serif;
+      line-height: 0.85;
+      font-weight: 700;
+      letter-spacing: 1px;
+      background-position: center center;
+      border-color: transparent;
+      border-style: solid;
+    }
+  </style>
 </head>
 <body>
-<h1><b>Congrats you have been logged to the best marketplace in the TATARSTAN!!!</b></h1>
+<h1 class="a"><b>Congrats have been logged to the best marketplace in the you TATARSTAN!!!</b></h1>
 </body>
 </html>
