--- a/src/main/resources/templates/auth/registration.html
+++ b/src/main/resources/templates/auth/registration.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="https://www.thymeleaf.org">
 <head>
     <title>Bozon</title>
-    <link th:href="@{auth_button.css}" rel="stylesheet" />
+    <link th:href="@{css/auth_button.css}" rel="stylesheet" />
 </head>
 <body>
 <div th:if="${param.logout}">
