develop add password change

--- a/src/main/resources/templates/auth/forgot_password.html
+++ b/src/main/resources/templates/auth/forgot_password.html
@@ -2,17 +2,20 @@
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml" xmlns:th="https://www.thymeleaf.org">
 <head>
   <meta charset="UTF-8">
-  <link th:href="@{css/profile_button.css}" rel="stylesheet" />
+  <link th:href="@{css/auth_button.css}" rel="stylesheet" />
   <title>Bozon</title>
 </head>
 <body>
-<form class="login_form" th:action="@{/forgot_password}" th:object="${user}" method="post">
+<form class="login_form" th:action="@{/forgot_password}" th:object="${user}" th:method="post">
   <p style="color: red" th:if="${#fields.hasErrors('username')}" th:errors="*{username}"></p>
-<!--  <p th:if="${#fields.hasErrors('username')}" th:errors></p>-->
   <div><label> Enter username : <input type="text" placeholder="Username" name="username"/> </label></div>
   <br>
-  <div><input class="profile_button" type="submit" value="Get"/></div>
+  <div><input class="auth_button" type="submit" value="Get"/></div>
+  <p th:if="${not #fields.hasErrors('username')}">New password:</p>
+  <p th:if="${not #fields.hasErrors('username')}" th:text="${newPass}"></p>
+  <br>
+  <a th:if="${not #fields.hasErrors('username')}" th:href="@{/login}"><input class="auth_button" type="button" value="Go to login"/></a>
 </form>
-
+<br>
 </body>
 </html>
