--- a/src/main/resources/templates/hello.html
+++ b/src/main/resources/templates/hello.html
@@ -16,6 +16,6 @@
   </style>
 </head>
 <body>
-<h1 class="a"><b>Congrats have been logged to the best marketplace in the TATARSTAN!!!</b></h1>
+<h1 class="a"><b>Congrats you have been logged to the best marketplace in the TATARSTAN!!!</b></h1>
 </body>
 </html>
