--- a/src/main/resources/templates/user/change_password.html
+++ b/src/main/resources/templates/user/change_password.html
@@ -1,17 +1,19 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="https://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <link th:href="@{css/profile_button.css}" rel="stylesheet" />
+    <link th:href="@{css/profile_button.css}" rel="stylesheet"/>
     <title>Bozon</title>
 </head>
 <body>
-<form class="login_form" th:action="@{/user/change_password}" method="post">
-  <div><label> Old password : <input type="password" placeholder="old password" name="oldPassword"/> </label></div>
-  <div><label> New password : <input type="password" placeholder="new password" name="newPassword"/> </label></div>
-  <div><label> Repeat password : <input type="password" placeholder="repeat password" name="repeatedPassword"/> </label></div>
+<form class="login_form" th:action="@{/user/change_password}" th:object="${pass}" th:method="post">
+    <div><label> New password : <input type="password" placeholder="new password" name="newPassword"/> </label></div>
+    <div><label> Repeat password : <input type="password" placeholder="repeat password" name="repeatedPassword"/></label></div>
+    <p style="color: red" th:if="${#fields.hasErrors('newPassword')}" th:errors="*{newPassword}"></p>
     <br>
-  <div><input class="profile_button" type="submit" value="Change"/></div>
+    <div><input class="profile_button" type="submit" value="Change"/></div>
+    <p th:if="${not #fields.hasErrors('newPassword')}" th:text="${passwordChanged}"></p>
+    <a th:if="${not #fields.hasErrors('newPassword')}" th:href="@{/user/profile}"><input class="auth_button" type="button" value="Go to profile"/></a>
 </form>
 </body>
 </html>
