develop add catalog

--- a/src/main/resources/templates/auth/forgot_password.html
+++ b/src/main/resources/templates/auth/forgot_password.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <link th:href="@{css/auth_button.css}" rel="stylesheet" />
-  <title>Bozon</title>
+  <title>BOZON</title>
 </head>
 <body>
 <form class="login_form" th:action="@{/forgot_password}" th:object="${user}" th:method="post">
