--- a/src/main/resources/templates/auth/registration.html
+++ b/src/main/resources/templates/auth/registration.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="https://www.thymeleaf.org">
 <head>
-    <title>Bozon</title>
+    <title>BOZON</title>
     <link th:href="@{css/auth_button.css}" rel="stylesheet" />
 </head>
 <body>
