--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="https://www.thymeleaf.org">
 <head>
-    <title>Bozon</title>
+    <title>BOZON</title>
 </head>
 <body>
-<h1><b>Welcome to Bozon!</b></h1>
+<h1><b>Welcome to BOZON!</b></h1>
 
 <p><a th:href="@{/login}">Login</a></p>
 <p><a th:href="@{/register}">Register</a></p>
