--- a/src/main/resources/templates/user/change_password.html
+++ b/src/main/resources/templates/user/change_password.html
@@ -2,8 +2,8 @@
 <html lang="en" xmlns:th="https://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <link th:href="@{css/profile_button.css}" rel="stylesheet"/>
-    <title>Bozon</title>
+    <link th:href="@{../css/profile_button.css}" rel="stylesheet"/>
+    <title>BOZON</title>
 </head>
 <body>
 <form class="login_form" th:action="@{/user/change_password}" th:object="${pass}" th:method="post">
@@ -13,7 +13,7 @@
     <br>
     <div><input class="profile_button" type="submit" value="Change"/></div>
     <p th:if="${not #fields.hasErrors('newPassword')}" th:text="${passwordChanged}"></p>
-    <a th:if="${not #fields.hasErrors('newPassword')}" th:href="@{/user/profile}"><input class="auth_button" type="button" value="Go to profile"/></a>
+    <a th:if="${not #fields.hasErrors('newPassword')}" th:href="@{/user/profile}"><input class="profile_button" type="button" value="Go to profile"/></a>
 </form>
 </body>
 </html>
