--- a/src/main/resources/templates/auth/login.html
+++ b/src/main/resources/templates/auth/login.html
@@ -1,10 +1,9 @@
 <!DOCTYPE html>
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml" xmlns:th="https://www.thymeleaf.org">
 <head>
-    <title>Bozon</title>
-    <link th:href="@{css/auth_button.css}" rel="stylesheet" />
-
-<!--    <link rel="shortcut icon" href="/images/favicon.png" type="image/png">-->
+    <title>BOZON</title>
+    <link th:href="@{../css/auth_button.css}" rel="stylesheet" />
+    <link rel="shortcut icon" href="/images/logo.png" type="image/png">
 </head>
 <body>
 <div th:if="${param.error}">
