--- a/src/main/resources/templates/user/profile.html
+++ b/src/main/resources/templates/user/profile.html
@@ -2,8 +2,8 @@
 <html lang="en" xmlns:th="https://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Bozon</title>
-    <link th:href="@{css/profile_button.css}" rel="stylesheet" />
+    <title>BOZON</title>
+    <link th:href="@{../css/profile_button.css}" rel="stylesheet" />
 </head>
 <body>
 <p><b>Profile</b></p>
@@ -12,7 +12,8 @@
     <p> Year of birth: <span th:text="${user.getDateOfBirth()}">year</span></p>
 </div>
 <br>
-<a th:href="@{/catalog}"><input class="profile_button" type="button" value="Go to catalog"></a>
+<a th:href="@{/products}"><input class="profile_button" type="button" value="Go to catalog"></a>
 <a th:href="@{/user/change_password}"><input class="profile_button" type="button" value="Change password"></a>
+<a th:href="@{/user/basket}"><input class="profile_button" type="button" value="Basket"></a>
 </body>
 </html>
