--- a/src/main/resources/templates/products/product.html
+++ b/src/main/resources/templates/products/product.html
@@ -10,9 +10,11 @@
             font-family: "GTEestiPro",arial,sans-serif;
         }
     </style>
+    <link th:href="@{../css/profile_button.css}" rel="stylesheet" />
 </head>
 <body>
-<p th:text="${product.getName() + ' ' + product.getDescription()}"></p>
-<a th:href="@{/user/basket}"><input class="profile_button" type="button" value="Add to basket"></a>
+<h1><b><p th:text="${product.getName()}"></p></b></h1>
+<p th:text="${product.getDescription()}"></p>
+<a th:href="@{/user/basket}"><input class="profile_button" type="button" value="Add to cart"></a>
 </body>
 </html>
