--- a/src/main/resources/templates/user/profile.html
+++ b/src/main/resources/templates/user/profile.html
@@ -14,6 +14,6 @@
 <br>
 <a th:href="@{/products}"><input class="profile_button" type="button" value="Go to catalog"></a>
 <a th:href="@{/user/change_password}"><input class="profile_button" type="button" value="Change password"></a>
-<a th:href="@{/user/basket}"><input class="profile_button" type="button" value="Basket"></a>
+<a th:href="@{/user/basket}"><input class="profile_button" type="button" value="Cart"></a>
 </body>
 </html>
