--- a/src/main/resources/templates/01_HTML/bzforgot.html
+++ b/src/main/resources/templates/01_HTML/bzforgot.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
-    <title>Sing In</title>
+    <title>Forgot Password</title>
     <link rel="icon" type="image/png" href="assets/images/icon.png">
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -19,10 +19,10 @@
 <body>
 
 
-<section class="section section--login" id="login">
+<section class="section section--login" id="forgot">
     <div class="section_header_login">
-        <h2 class="section_title_login">Sing In</h2>
-        <h3 class="section_suptitle_login">You have been logged out!</h3>
+        <h2 class="section_title_login">Forgot Password</h2>
+<!--        <h3 class="section_suptitle_login">Enter new password</h3>-->
     </div>
 
     <form>
@@ -30,22 +30,24 @@
             <div class="login_item" >
                 <div class="login_title">
                     <div>
-                        <text class="login_text">Username</text>
+                        <text class="login_text">Enter Username</text>
                         <input class="login_form" type="text" autocomplete="on">
                     </div>
+                    <div class="container container--btn_f">
+                        <div><input class="btn" type="submit" value="Get"></div>
+                    </div>
                     <div>
-                        <text class="login_text">Password</text>
+                        <text class="login_text">New Password</text>
                         <input class="login_form" type="text" autocomplete="on">
                     </div>
                 </div>
 
-                <div class="container container--btn">
-                    <div><input class="btn" type="submit" value="Sign Up"></div>
-                    <div><input class="btn" type="submit" value="Sign In"></div>
+                <div class="container container--btn_f">
+                    <div><input class="btn" type="submit" value="Go to login"></div>
                 </div>
-                <nav class="pas">
-                    <a class="pas_link" href="bzforgot.html#forgot">Forgot Password</a>
-                </nav>
+                <!--                <nav class="pas">-->
+                <!--                    <a class="pas_link" href="#">Forgot Password</a>-->
+                <!--                </nav>-->
 
             </div>
         </div>
