--- a/src/main/resources/templates/01_HTML/bzindex.html
+++ b/src/main/resources/templates/01_HTML/bzindex.html
@@ -19,6 +19,9 @@
 </head>
 
 <body>
+
+
+<!--Main-->
 <section class="page" id="home">
   <header class="header" id="header">
     <div class="container">
@@ -29,7 +32,7 @@
           </a>
         <nav class="nav">
           <a class="nav_link" href="bzindex.html#home">Home</a>
-          <a class="nav_link" href="#">Catalog</a>
+          <a class="nav_link" href="bzindex.html#catalog">Catalog</a>
           <a class="nav_link" href="#">Chart</a>
           <a class="nav_link" href="#">Contact</a>
           <a class="nav_link" href="bzlogin.html#login">Profile</a>
@@ -58,37 +61,30 @@
   </div>
 </section>
 
-<!--<section class="section">-->
-<!--  <div class="container">-->
 
-<!--    <div class="section_header">-->
-<!--      <h3 class="section_suptitle">О нас</h3>-->
-<!--      <h2 class="section_title">Поликлиника № 21</h2>-->
-<!--      <div class="section_text">-->
-<!--        <p>Государственное автономное учреждение здравоохранения "Городская поликлиника №21" существует с 1987 года.</p>-->
-<!--      </div>-->
-<!--    </div>-->
 
-<!--    <div class="about">-->
-<!--      <div class="about_item">-->
-<!--        <div class="about_img">-->
-<!--          <img src="recourses/images/about1.jpg" alt="">-->
-<!--        </div>-->
-<!--        <div class="about_text"><txt>Адрес</txt>-->
-<!--          <p>Поликлиника Студенческая, город Казань, Оренбургский тракт, 95</p>-->
-<!--        </div>-->
-<!--      </div>-->
+<!--Catalog-->
+<section class="section section--catalog" id="catalog">
+  <div class="container">
 
-<!--      <div class="about_item">-->
-<!--        <div class="about_img">-->
-<!--          <img src="recourses/images/about2.jpg" alt="">-->
-<!--        </div>-->
-<!--        <div class="about_text"><txt>Часы работы</txt>-->
-<!--          <p>Пн - Пт: 8.00 - 20.00</p>-->
-<!--          <p>Сб: 8.00 - 18.00</p>-->
-<!--          <p>Вск: 9.00 - 15.00</p>-->
-<!--        </div>-->
-<!--      </div>-->
+    <div class="section_header">
+      <h2 class="section_title section_title--catalog">Catalog</h2>
+    </div>
+
+    <div class="catalog">
+      <div class="catalog_item">
+        <div class="catalog_img">
+          <img src="assets/images/catalog-1.png" alt="">
+        </div>
+        <div class="catalog_text">Products</div>
+      </div>
+
+      <div class="catalog_item">
+        <div class="catalog_img">
+          <img src="assets/images/catalog-2.png" alt="">
+        </div>
+        <div class="catalog_text">Sales</div>
+      </div>
 
 <!--      <div class="about_item">-->
 <!--        <div class="about_img">-->
@@ -99,9 +95,9 @@
 <!--          <p>Макарова Анастасия</p>-->
 <!--        </div>-->
 <!--      </div>-->
-<!--    </div>-->
-<!--  </div>-->
-<!--</section>-->
+    </div>
+  </div>
+</section>
 
 
 
