develop add beatuful front

--- a/src/main/resources/templates/auth/login.html
+++ b/src/main/resources/templates/auth/login.html
@@ -1,25 +1,61 @@
 <!DOCTYPE html>
-<html lang="en" xmlns="http://www.w3.org/1999/xhtml" xmlns:th="https://www.thymeleaf.org">
+<html lang="en">
 <head>
-    <title>BOZON</title>
-    <link th:href="@{../css/auth_button.css}" rel="stylesheet" />
-    <link rel="shortcut icon" href="/images/logo.png" type="image/png">
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+
+    <title>Sing In</title>
+<!--    <link rel="icon" type="image/png" th:href="assets/images/icon.png">-->
+
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <link rel="stylesheet" th:href="@{../css/style.css}">
+    <!--  Fonts-->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital@0;1&family=Work+Sans:wght@300;500;700&display=swap"
+          rel="stylesheet">
 </head>
 <body>
-<div th:if="${param.error}">
-    Invalid username and password.
-</div>
-<div th:if="${param.logout}">
-    You have been logged out.
-</div>
-<form class="login_form" th:action="@{/login}" method="post">
-    <div><label> Username : <input type="text" placeholder="Username" name="username"/> </label></div>
-    <div><label> Password: <input type="password" placeholder="Password" name="password"/> </label></div>
-    <br>
-    <div><input class="auth_button" type="submit" value="Sign In"/></div>
-</form>
-<br>
-<a th:href="@{/register}"><input class="auth_button" type="button" value="Sign up"/></a>
-<a th:href="@{/forgot_password}"><input class="auth_button" type="button" value="Forgot password"></a>
+
+
+<section class="section section--login" id="login">
+    <div class="section_header_login">
+        <h2 class="section_title_login">Sing In</h2>
+        <h3 class="section_suptitle_login">You have been logged out!</h3>
+    </div>
+    <div th:if="${param.error}">
+        Invalid username and password.
+    </div>
+    <form th:action="@{/login}" method="post">
+        <div class="login_page">
+            <div class="login_item">
+                <div class="login_title">
+                    <div>
+                        <text class="login_text">Username</text>
+                        <input class="login_form" type="text" autocomplete="on">
+                    </div>
+                    <div>
+                        <text class="login_text">Password</text>
+                        <input class="login_form" type="password" autocomplete="on">
+                    </div>
+                </div>
+
+                <div class="container container--btn">
+                    <a th:href="@{/register}"><input class="btn" type="submit" value="Sign Up"></a>
+                    <a><input class="btn" type="submit" value="Sign In"></a>
+                </div>
+                <nav class="pas">
+                    <a th:href="@{/forgot_password}" class="pas_link">Forgot Password</a>
+                </nav>
+
+            </div>
+        </div>
+    </form>
+
+
+    </div>
+</section>
+
 </body>
 </html>
