develop intermediate version with frontend!!!!!!! cool!!1 nice!!!

--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -30,7 +30,7 @@ hr {
 /* Page */
 .page {
     overflow: hidden;
-    background: url("../../assets/images/home-7.jpg") center no-repeat;
+    background: url("../images/home-7.jpg") center no-repeat;
     -webkit-background-size: cover;
     background-size: cover;
  }
