--- a/src/main/resources/templates/auth/forgot_password.html
+++ b/src/main/resources/templates/auth/forgot_password.html
@@ -1,21 +1,58 @@
 <!DOCTYPE html>
-<html lang="en" xmlns="http://www.w3.org/1999/xhtml" xmlns:th="https://www.thymeleaf.org">
+<html lang="en" xmlns:th="https://www.thymeleaf.org">
 <head>
-  <meta charset="UTF-8">
-  <link th:href="@{css/auth_button.css}" rel="stylesheet" />
-  <title>BOZON</title>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+
+    <title>Forgot Password</title>
+    <link rel="icon" type="image/png" th:href="@{../images/icon.png}">
+
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <link rel="stylesheet" th:href="@{../css/style.css}">
+    <!--  Fonts-->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital@0;1&family=Work+Sans:wght@300;500;700&display=swap"
+          rel="stylesheet">
 </head>
 <body>
-<form class="login_form" th:action="@{/forgot_password}" th:object="${user}" th:method="post">
-  <p style="color: red" th:if="${#fields.hasErrors('username')}" th:errors="*{username}"></p>
-  <div><label> Enter username : <input type="text" placeholder="Username" name="username"/> </label></div>
-  <br>
-  <div><input class="auth_button" type="submit" value="Get"/></div>
-  <p th:if="${not #fields.hasErrors('username')}">New password:</p>
-  <p th:if="${not #fields.hasErrors('username')}" th:text="${newPass}"></p>
-  <br>
-  <a th:if="${not #fields.hasErrors('username')}" th:href="@{/login}"><input class="auth_button" type="button" value="Go to login"/></a>
-</form>
-<br>
+
+
+<section class="section section--login" id="forgot">
+    <div class="section_header_login">
+        <h2 class="section_title_login">Forgot Password</h2>
+    </div>
+
+    <form th:action="@{/forgot_password}" th:object="${user}" th:method="post">
+        <div class="login_page">
+            <div class="login_item">
+                <div class="login_title">
+                    <div>
+                        <p style="color: red" th:if="${#fields.hasErrors('username')}" th:errors="*{username}"></p>
+                        <text class="login_text">Enter Username</text>
+                        <input class="login_form" type="text" autocomplete="on" name="username">
+                    </div>
+                    <div class="container container--btn_f">
+                        <div><input class="btn" type="submit" value="Get"></div>
+                    </div>
+                    <div>
+                        <text class="login_text">New Password</text>
+                        <input class="login_form" type="text" autocomplete="on" disabled th:value="${newPass}">
+                    </div>
+                </div>
+
+                <div class="container container--btn_f">
+                    <a th:href="@{/login}"><input class="btn" type="button" value="Go to login"></a>
+                </div>
+
+            </div>
+        </div>
+    </form>
+
+
+    </div>
+</section>
+
 </body>
 </html>
