--- a/src/main/resources/templates/user/change_password.html
+++ b/src/main/resources/templates/user/change_password.html
@@ -2,18 +2,56 @@
 <html lang="en" xmlns:th="https://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <link th:href="@{../css/profile_button.css}" rel="stylesheet"/>
-    <title>BOZON</title>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+
+    <title>Change Password</title>
+    <link rel="icon" type="image/png" th:href="@{../images/icon.png}">
+
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <link rel="stylesheet" th:href="@{../css/style.css}">
+    <!--  Fonts-->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital@0;1&family=Work+Sans:wght@300;500;700&display=swap"
+          rel="stylesheet">
 </head>
 <body>
-<form class="login_form" th:action="@{/user/change_password}" th:object="${pass}" th:method="post">
-    <div><label> New password : <input type="password" placeholder="new password" name="newPassword"/> </label></div>
-    <div><label> Repeat password : <input type="password" placeholder="repeat password" name="repeatedPassword"/></label></div>
-    <p style="color: red" th:if="${#fields.hasErrors('newPassword')}" th:errors="*{newPassword}"></p>
-    <br>
-    <div><input class="profile_button" type="submit" value="Change"/></div>
-    <p th:if="${not #fields.hasErrors('newPassword')}" th:text="${passwordChanged}"></p>
-    <a th:if="${not #fields.hasErrors('newPassword')}" th:href="@{/user/profile}"><input class="profile_button" type="button" value="Go to profile"/></a>
-</form>
+
+
+<section class="section section--login" id="change">
+    <div class="section_header_login">
+        <h2 class="section_title_login">Change Password</h2>
+        <h3 class="section_suptitle_login">Enter new password</h3>
+    </div>
+
+    <form th:action="@{/user/change_password}" th:object="${pass}" th:method="post">
+        <div class="login_page">
+            <div class="login_item" >
+                <div class="login_title">
+                    <div>
+                        <text class="login_text">New Password</text>
+                        <input class="login_form" type="password" autocomplete="on" name="newPassword">
+                    </div>
+                    <div>
+                        <text class="login_text">Repeat Password</text>
+                        <input class="login_form" type="password" autocomplete="on" name="repeatedPassword">
+                    </div>
+                </div>
+
+                <div class="container container--btn">
+                    <p style="color: red" th:if="${#fields.hasErrors('newPassword')}" th:errors="*{newPassword}"></p>
+                    <div><input class="btn" type="submit" value="Change"></div>
+                    <a th:href="@{/user/profile}"><input class="btn" type="submit" value="Go to profile"></a>
+                </div>
+
+            </div>
+        </div>
+    </form>
+
+
+    </div>
+</section>
+
 </body>
 </html>
