--- a/src/main/resources/templates/01_HTML/bzindex.html
+++ b/src/main/resources/templates/01_HTML/bzindex.html
@@ -76,7 +76,7 @@
         <div class="catalog_img">
           <img src="assets/images/catalog-1.png" alt="">
         </div>
-        <div class="catalog_text">Products</div>
+        <div class="catalog_text">Catalog</div>
       </div>
 
       <div class="catalog_item">
