--- a/src/main/resources/templates/auth/login.html
+++ b/src/main/resources/templates/auth/login.html
@@ -2,7 +2,7 @@
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml" xmlns:th="https://www.thymeleaf.org">
 <head>
     <title>BOZON</title>
-    <link th:href="@{../css/auth_button.css}" rel="stylesheet" />
+    <link href="../../static/css/auth_button.css" rel="stylesheet" />
     <link rel="shortcut icon" href="/images/logo.png" type="image/png">
 </head>
 <body>
