develop add cart demo

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -33,8 +33,8 @@
                 </a>
                 <nav class="nav">
                     <a class="nav_link" th:href="@{/}">Home</a>
-                    <a class="nav_link" href="index.html#catalog">Catalog</a>
-                    <a class="nav_link" href="#">Chart</a>
+                    <a class="nav_link" th:href="@{/products}">Catalog</a>
+                    <a class="nav_link" th:href="@{/user/cart}">Cart</a>
                     <a class="nav_link" href="#">Contact</a>
                     <a class="nav_link" th:href="@{/user/profile}">Profile</a>
                 </nav>
