--- a/src/main/resources/templates/user/change_password.html
+++ b/src/main/resources/templates/user/change_password.html
@@ -29,6 +29,10 @@
         <div class="login_page">
             <div class="login_item" >
                 <div class="login_title">
+<!--                    <div>-->
+<!--                        <text class="login_text">Old Password</text>-->
+<!--                        <input class="login_form" type="password" autocomplete="on" name="oldPassword">-->
+<!--                    </div>-->
                     <div>
                         <text class="login_text">New Password</text>
                         <input class="login_form" type="password" autocomplete="on" name="newPassword">
