--- a/src/main/resources/templates/products/product.html
+++ b/src/main/resources/templates/products/product.html
@@ -3,7 +3,6 @@
 <head>
     <meta charset="UTF-8">
     <title>BOZON</title>
-    <link th:href="@{css/profile_button.css}" rel="stylesheet" />
     <style>
         p {
             color: black;
@@ -16,6 +15,9 @@
 <h1><b><p th:text="${product.getName()}"></p></b></h1>
 <h2><p th:text="${product.getCategory()}"></p></h2>
 <p th:text="${product.getDescription()}"></p>
-<a th:href="@{/user/basket}"><input class="profile_button" type="button" value="Add to cart"></a>
+<form th:action="@{/products/{id}/add_to_cart (id=${product.getId()})}" th:object="${product}" th:method="patch">
+    <button class="profile_button" type="submit" name="product">Add to cart</button>
+</form>
+
 </body>
 </html>
