--- a/src/main/resources/templates/01_HTML/bzindex.html
+++ b/src/main/resources/templates/01_HTML/bzindex.html
@@ -26,7 +26,7 @@
   <header class="header" id="header">
     <div class="container">
       <div class="header_inner" style="height: 67px">
-          <a href="bzindex.html" class="nav_logo" style="height: 67px">
+          <a href="bzindex.html" class="header_logo" style="height: 67px">
             <img src="assets/images/logo-light.png" alt="" width="170">
             <img src="assets/images/logo-light.svg" alt="" width="170">
           </a>
