develop cart v1.0 finally.... may be

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -28,7 +28,7 @@
     <header class="header" id="header">
         <div class="container">
             <div class="header_inner" style="height: 67px">
-                <a href="index.html" class="header_logo" style="height: 67px">
+                <a th:href="@{/}" class="header_logo" style="height: 67px">
                     <img th:src="@{/images/logo-light.png}" alt="" width="170">
 <!--                    <img th:src="@{/images/logo-light.svg}" alt="" width="170">-->
                 </a>
