--- a/src/main/resources/templates/products/products.html
+++ b/src/main/resources/templates/products/products.html
@@ -35,5 +35,8 @@
     <br>
     <br>
 </div>
+<form th:action="@{/}">
+    <button class="profile_button" type="submit">Back</button>
+</form>
 </body>
 </html>
